Agregue el inicio
Agregue la pagina de inicio y corregí un error en la navbar en las paginas de usuarios

--- a/css/editar_info.css
+++ b/css/editar_info.css
@@ -8,7 +8,7 @@
   .navbar-brand {
     font-weight: bold;
     font-size: 1.4rem;
-    color: white;
+    color: white !important;
     display: flex;
     align-items: center;
     transition: color 0.3s;
