--- a/css/style_Inicio.css
+++ b/css/style_Inicio.css
@@ -104,6 +104,8 @@ body {
     padding: 0;
     background: url('/img/fondo.jpg') no-repeat center center fixed;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 /* Estilo del carrusel */
