--- a/css/style_Gusuario.css
+++ b/css/style_Gusuario.css
@@ -99,7 +99,12 @@
   }
 
 body {
-    background-color: #f0f0f0;
+  font-family: Arial, sans-serif;
+  color: white;
+  margin: 0;
+  padding: 0;
+  background: url('/img/fondo.jpg') no-repeat center center fixed;
+  background-size: cover;
 }
 .profile-section {
     background: #ffffff;
