--- a/css/Style_Registrarse.css
+++ b/css/Style_Registrarse.css
@@ -99,12 +99,15 @@
   }
 
   body {
-    background: url('/img/fondo.jpg') no-repeat center center fixed;
+    background-image: url('/img/fondo.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
     background-size: cover;
     margin: 0;
     font-family: Arial, sans-serif;
     position: relative;
-}
+  }
 
 /* Fondo semitransparente */
 body::before {
