--- a/css/style_soporte.css
+++ b/css/style_soporte.css
@@ -136,7 +136,7 @@ body {
     border-radius: 5px;
     margin-top: 5px;
     display: none;
-    color: #ffffff;
+    color: #000000;
 }
 h1 {
     color: white !important;
